# OpenGL_core_3_lab

./: .gitignore  CMakeLists.txt  README.txt  TODO.txt  doxygen_setup.cmake  launch_cmake_visual2017.bat
00_INSTRUCTIONS/: build_doc.sh  doxygen_config  doxygen_config.txt  instructions_en.htm  instructions_fr.htm  my_customdoxygen.css
00_INSTRUCTIONS/lab_instructions/: assignement1.h  lab1.h  lab2.h  lab3.h  lab4.h  main_page.h  sujet-iig3d.h
data/: camel.mtl
shaders/: fragmentdefault.glsl  vertexdefault.glsl
src/: main.cpp  timer.cpp  timer.hpp
src/fileloaders/: fileloader.cpp  fileloader.h  mesh.cpp  mesh.h  objfileparser.cpp  objfileparser.h  objloader.cpp  objloader.h  objmesh.cpp  objmesh.h  utils.h
src/gl_utils/: glassert.h  gldirect_draw.cpp  gldirect_draw.h  opengl.h
src/gl_utils/glew/: README.TXT  glew.c  glxew.h
src/qt_gui/: mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h
src/rendersystem/: renderer.EN.cpp  renderer.FR.cpp  renderer.FR.cpp.backup.BLANK  renderer.cpp  renderer.h
